[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnbot"
version = "0.1.1"
description = "Official Python SDK for LnBot — Bitcoin for AI Agents. Send and receive sats over Lightning with a few lines of code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "LnBot" }]
keywords = [
    "lnbot",
    "lightning",
    "lightning-network",
    "bitcoin",
    "payments",
    "wallet",
    "bolt11",
    "sats",
    "ai-agent",
    "mcp",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://ln.bot"
Documentation = "https://ln.bot/docs"
Repository = "https://github.com/lnbotdev/python-sdk"
Issues = "https://github.com/lnbotdev/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lnbot"]
